--- a/apps/sigma/src/app/app.component.html
+++ b/apps/sigma/src/app/app.component.html
@@ -1,1 +1,1 @@
-<sigma-nx-nx-welcome></sigma-nx-nx-welcome> <router-outlet></router-outlet>
+<mat-icon>search</mat-icon> <router-outlet></router-outlet>
