--- a/apps/sigma/src/app/core/layout/menu/menu.component.scss
+++ b/apps/sigma/src/app/core/layout/menu/menu.component.scss
@@ -15,7 +15,7 @@
   }
 }
 
-sigma-nx--menu-item {
+sigma-nx-menu-item {
   margin-left: 15px;
   border-top: 2px solid rgba(44, 97, 174, 0.88);
   margin-right: 15px;
